# serializer version: 1
# name: test_feature_spec_version_deterministic
  'a1324dfb386fb264f3dd53c841672277c34177558418f20a0aa8ee007e73c06b'
# ---
# name: test_feature_spec_version_includes_all_properties
  'e20ff69e6f94723c601c90dfbf8ce40e4f8d3d4bba14c1524555bc4803bccd94'
# ---
# name: test_feature_spec_version_recorded_in_metadata_store
  dict({
    'feature_key': 'recorded/feature',
    'metaxy_feature_spec_version': '4ea1c65aa5270149fa2625b8f4e5df5c1bb760635541c634dab843f3d665be7e',
    'metaxy_feature_version': '0c7b2d83252fbf2f689bec7d37c4f7ffb103755d11eafabc1e000a372f415d83',
    'metaxy_snapshot_version': '14d4294da40f4ab27ca85eb739fffd70e92c92522dbcba995cfa2aa343988bf3',
  })
# ---
# name: test_feature_spec_version_stored_in_snapshot
  dict({
    'feature_class_path': 'test_spec_version.SnapshotFeature',
    'feature_schema': dict({
      'additionalProperties': False,
      'properties': dict({
        'metaxy_created_at': dict({
          'anyOf': list([
            dict({
              'format': 'date-time',
              'type': 'string',
            }),
            dict({
              'type': 'null',
            }),
          ]),
          'default': None,
          'description': 'Timestamp when the metadata row was created (UTC)',
          'title': 'Metaxy Created At',
        }),
        'metaxy_data_version': dict({
          'anyOf': list([
            dict({
              'type': 'string',
            }),
            dict({
              'type': 'null',
            }),
          ]),
          'default': None,
          'description': 'Hash of metaxy_data_version_by_field',
          'title': 'Metaxy Data Version',
        }),
        'metaxy_data_version_by_field': dict({
          'anyOf': list([
            dict({
              'additionalProperties': dict({
                'type': 'string',
              }),
              'type': 'object',
            }),
            dict({
              'type': 'null',
            }),
          ]),
          'default': None,
          'description': 'Field-level data version hashes (maps field names to version hashes)',
          'title': 'Metaxy Data Version By Field',
        }),
        'metaxy_feature_version': dict({
          'anyOf': list([
            dict({
              'type': 'string',
            }),
            dict({
              'type': 'null',
            }),
          ]),
          'default': None,
          'description': 'Hash of the feature definition (dependencies + fields + code_versions)',
          'title': 'Metaxy Feature Version',
        }),
        'metaxy_materialization_id': dict({
          'anyOf': list([
            dict({
              'type': 'string',
            }),
            dict({
              'type': 'null',
            }),
          ]),
          'default': None,
          'description': 'External orchestration run ID (e.g., Dagster Run ID)',
          'title': 'Metaxy Materialization Id',
        }),
        'metaxy_provenance': dict({
          'anyOf': list([
            dict({
              'type': 'string',
            }),
            dict({
              'type': 'null',
            }),
          ]),
          'default': None,
          'description': 'Hash of metaxy_provenance_by_field',
          'title': 'Metaxy Provenance',
        }),
        'metaxy_provenance_by_field': dict({
          'additionalProperties': dict({
            'type': 'string',
          }),
          'description': 'Field-level provenance hashes (maps field names to hashes)',
          'title': 'Metaxy Provenance By Field',
          'type': 'object',
        }),
        'metaxy_snapshot_version': dict({
          'anyOf': list([
            dict({
              'type': 'string',
            }),
            dict({
              'type': 'null',
            }),
          ]),
          'default': None,
          'description': 'Hash of the entire feature graph snapshot',
          'title': 'Metaxy Snapshot Version',
        }),
      }),
      'title': 'SnapshotFeature',
      'type': 'object',
    }),
    'feature_spec': dict({
      'deps': list([
      ]),
      'fields': list([
        dict({
          'code_version': '1',
          'deps': list([
          ]),
          'key': 'data',
        }),
      ]),
      'id_columns': list([
        'sample_uid',
      ]),
      'key': 'snapshot/test',
      'metadata': dict({
      }),
    }),
    'metaxy_feature_spec_version': '26736b45eeb37186ef6678426b85f3265cdba9eb5b782a8f41496123d5649cd4',
    'metaxy_feature_version': '7cfde77960e3cf10327e9cb97f311418b101fc5ee2c146922a997306e318edaf',
    'metaxy_full_definition_version': '9a61cb119a3953cfc47a366ea0abc789635c20f89ff5a866437186085d5cd665',
    'project': 'test',
  })
# ---
# name: test_feature_spec_version_with_column_selection_and_rename
  '5009240b6297be73901edc92a41ba7fe4dffe81e7985c99609cbd8d54d27d130'
# ---
# name: test_feature_spec_version_with_multiple_complex_deps
  '34faac552d7b1fb2237d99334ce4a905f6bde260d70ec389cb8cd5fe462d7c5b'
# ---
